--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,26 +1,18 @@
 ---
 import Navigation from "./Navigation.astro";
-const currentPath = Astro.url.pathname;
 ---
 
 <header class="border-b border-primary">
   <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between items-center h-16">
       {/* Logo */}
-      <a
-        href="/"
-        class="flex-shrink-0 flex items-center"
-      >
-        <img
-          src="/artmena-logo.svg"
-          alt="Artmena"
-          class="h-8 w-auto"
-        />
+      <a href="/" class="flex-shrink-0 flex items-center">
+        <img src="/artmena-logo.svg" alt="Artmena" class="h-8 w-auto" />
       </a>
 
       {/* Desktop Navigation */}
       <div class="hidden sm:block">
-        <Navigation currentPath={currentPath} />
+        <Navigation />
       </div>
     </div>
   </nav>
