--- a/src/components/Cards/CardList.astro
+++ b/src/components/Cards/CardList.astro
@@ -1,5 +1,6 @@
 ---
 import Card from "./Card.astro";
+import { ClientRouter } from "astro:transitions";
 export interface CardData {
   imageSrc: string;
   imageAlt: string;
@@ -37,15 +38,23 @@ const getMaxRowsClass = () => {
 ---
 
 <section class="py-8">
+  <ClientRouter />
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     {/* Header with title and view all button */}
-    <div class="flex items-center mb-6">
-      <h2 class="text-2xl font-bold text-primary w-1/3">{title}</h2>
+    <div class="flex items-center justify-between md:justify-start mb-6">
+      <h2
+        class="text-2xl font-bold text-primary md:w-1/3"
+        transition:name={title}
+      >
+        {title}
+      </h2>
       {
         onViewAll && (
-          <button class="text-secondary hover:text-primary text-sm border-l border-black hover:border-primary pl-4 transition-colors cursor-pointer">
-            view all
-          </button>
+          <a href={onViewAll}>
+            <button class="text-secondary hover:text-primary text-sm border-l border-black hover:border-primary pl-4 transition-colors cursor-pointer">
+              view all
+            </button>
+          </a>
         )
       }
     </div>
@@ -69,7 +78,7 @@ const getMaxRowsClass = () => {
                   text1={card.text1}
                   text2={card.text2}
                   imageRatio={imageRatio}
-                  onClick={() => console.log("Card clicked")}
+                  onclick={"Card clicked"}
                 />
               </div>
             ))
