--- a/src/components/Cards/HorizontalCard.astro
+++ b/src/components/Cards/HorizontalCard.astro
@@ -1,4 +1,5 @@
 ---
+import { fade } from "astro:transitions";
 export interface Props {
   imageSrc: string;
   imageAlt: string;
@@ -50,16 +51,12 @@ const getRatioClass = () => {
 >
   <div class="flex flex-col md:flex-row">
     {/* Image Section */}
-    <div class="w-full md:w-1/3">
-      <div class={`h-64 md:h-full ${getRatioClass()}`}>
-        <img src={imageSrc} alt={imageAlt} class="w-full h-full object-cover" />
-      </div>
+    <div class={`h-64 md:h-full ${getRatioClass()}`}>
+      <img src={imageSrc} alt={imageAlt} class="w-full h-full object-cover" />
     </div>
 
     {/* Content Section */}
-    <div
-      class="w-full md:w-1/2 lg:w-3/5 pl-6 py-1 flex flex-col justify-between"
-    >
+    <div class="w-full md:w-3/5 md:pl-6 py-1 flex flex-col justify-between">
       <div class="flex-grow">
         {/* Title */}
         <h3 class="text-xl font-bold text-primary mb-3">{title}</h3>
