--- a/src/components/Cards/HorizontalCardList.astro
+++ b/src/components/Cards/HorizontalCardList.astro
@@ -24,13 +24,20 @@ const { title, onViewAll, children, cards, imageRatio } = Astro.props;
 <section class="py-8">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     {/* Header with title and view all button */}
-    <div class="flex items-center mb-6">
-      <h2 class="text-2xl font-bold text-primary w-1/3">{title}</h2>
+    <div class="flex items-center justify-between md:justify-start mb-6">
+      <h2
+        class="text-2xl font-bold text-primary md:w-1/3"
+        transition:name={title}
+      >
+        {title}
+      </h2>
       {
         onViewAll && (
-          <button class=" text-secondary hover:text-primary font-medium text-sm border-l border-black pl-4 transition-colors  cursor-pointer">
-            view all
-          </button>
+          <a href={onViewAll}>
+            <button class=" text-secondary hover:text-primary font-medium text-sm border-l border-black pl-4 transition-colors  cursor-pointer">
+              view all
+            </button>
+          </a>
         )
       }
     </div>
