--- a/src/pages/artists/category/[category].astro
+++ b/src/pages/artists/category/[category].astro
@@ -157,6 +157,6 @@ switch (category) {
   <div class="min-h-screen">
     <PageHero title={pageTitle} />
 
-    <CardList cards={artists} imageRatio={"3:4"} />
+    <CardList objectType="artists" cards={artists} imageRatio={"3:4"} />
   </div>
 </BaseLayout>
