--- a/src/pages/artists/index.astro
+++ b/src/pages/artists/index.astro
@@ -126,6 +126,7 @@ const isAllView = false;
 
     {/* Featured Artists */}
     <CardList
+      objectType="artists"
       title="Featured Artists"
       onViewAll={"artists/category/all"}
       cards={featuredArtists}
@@ -135,6 +136,7 @@ const isAllView = false;
 
     {/* Emerging Artists */}
     <CardList
+      objectType="artists"
       title="Emerging Artists"
       onViewAll={"artists/category/all"}
       cards={emergingArtists}
