--- a/src/pages/artwork/index.astro
+++ b/src/pages/artwork/index.astro
@@ -1,9 +1,9 @@
 ---
-import "../styles/index.css";
+import "../../styles/index.css";
 
-import PageHero from "../components/PageHero.astro";
-import CardList from "../components/Cards/CardList.astro";
-import BaseLayout from "../layouts/BaseLayout.astro";
+import PageHero from "../../components/PageHero.astro";
+import CardList from "../../components/Cards/CardList.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 
 export interface CardData {
   imageSrc: string;
@@ -133,6 +133,6 @@ const isAllView = false;
   <div class="min-h-screen">
     <PageHero title="Artwork" />
 
-    <CardList cards={artwork} />
+    <CardList objectType="artwork" cards={artwork} />
   </div>
 </BaseLayout>
