--- a/src/components/Cards/HorizontalCard.astro
+++ b/src/components/Cards/HorizontalCard.astro
@@ -1,6 +1,7 @@
 ---
 import { fade } from "astro:transitions";
 export interface Props {
+  objectType: string;
   imageSrc: string;
   imageAlt: string;
   title: string;
@@ -15,6 +16,7 @@ export interface Props {
 }
 
 const {
+  objectType,
   imageSrc,
   imageAlt,
   title,
@@ -49,52 +51,54 @@ const getRatioClass = () => {
 <div
   class={`w-full overflow-hidden cursor-pointer  border-b border-transparent hover:border-primary transition-colors ${className}`}
 >
-  <div class="flex flex-col md:flex-row">
-    {/* Image Section */}
-    <div class={`h-64 md:h-full ${getRatioClass()}`}>
-      <img src={imageSrc} alt={imageAlt} class="w-full h-full object-cover" />
-    </div>
-
-    {/* Content Section */}
-    <div class="w-full md:w-3/5 md:pl-6 py-1 flex flex-col justify-between">
-      <div class="flex-grow">
-        {/* Title */}
-        <h3 class="text-xl font-bold text-primary mb-3">{title}</h3>
-
-        {/* Text Field 1 */}
-        {
-          text1 && (
-            <p class="text-secondary text-sm  leading-relaxed">{text1}</p>
-          )
-        }
-
-        {/* Text Field 2 */}
-        {
-          text2 && (
-            <p class="text-secondary text-sm  leading-relaxed">{text2}</p>
-          )
-        }
-
-        {/* Description */}
-        <p class="text-secondary text-base mt-4 leading-relaxed">
-          {description}
-        </p>
+  <a href=`/${objectType}/1`>
+    <div class="flex flex-col md:flex-row">
+      {/* Image Section */}
+      <div class={`h-64 md:h-full ${getRatioClass()}`}>
+        <img src={imageSrc} alt={imageAlt} class="w-full h-full object-cover" />
       </div>
 
-      {/*/!* Button *!/*/}
-      {/*<div class="mt-auto pt-2">*/}
-      {/*  <button*/}
-      {/*    onClick={(e) => {*/}
-      {/*      e.stopPropagation();*/}
-      {/*      onClick?.();*/}
-      {/*    }}*/}
-      {
-        /*    class="bg-primary text-white px-4 py-2 mb-2 rounded-full hover:bg-secondary transition-colors duration-200 font-medium text-sm cursor-pointer"*/
-      }
-      {/*  >*/}
-      {/*    {buttonText}*/}
-      {/*  </button>*/}
-      {/*</div>*/}
+      {/* Content Section */}
+      <div class="w-full md:w-3/5 md:pl-6 py-1 flex flex-col justify-between">
+        <div class="flex-grow">
+          {/* Title */}
+          <h3 class="text-xl font-bold text-primary mb-3">{title}</h3>
+
+          {/* Text Field 1 */}
+          {
+            text1 && (
+              <p class="text-secondary text-sm  leading-relaxed">{text1}</p>
+            )
+          }
+
+          {/* Text Field 2 */}
+          {
+            text2 && (
+              <p class="text-secondary text-sm  leading-relaxed">{text2}</p>
+            )
+          }
+
+          {/* Description */}
+          <p class="text-secondary text-base mt-4 leading-relaxed">
+            {description}
+          </p>
+        </div>
+
+        {/*/!* Button *!/*/}
+        {/*<div class="mt-auto pt-2">*/}
+        {/*  <button*/}
+        {/*    onClick={(e) => {*/}
+        {/*      e.stopPropagation();*/}
+        {/*      onClick?.();*/}
+        {/*    }}*/}
+        {
+          /*    class="bg-primary text-white px-4 py-2 mb-2 rounded-full hover:bg-secondary transition-colors duration-200 font-medium text-sm cursor-pointer"*/
+        }
+        {/*  >*/}
+        {/*    {buttonText}*/}
+        {/*  </button>*/}
+        {/*</div>*/}
+      </div>
     </div>
-  </div>
+  </a>
 </div>
