--- a/src/pages/exhibitions/category/[category].astro
+++ b/src/pages/exhibitions/category/[category].astro
@@ -1,9 +1,9 @@
 ---
-import "../../styles/index.css";
+import "../../../styles/index.css";
 
-import PageHero from "../../components/PageHero.astro";
-import CardList from "../../components/Cards/CardList.astro";
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import PageHero from "../../../components/PageHero.astro";
+import CardList from "../../../components/Cards/CardList.astro";
+import BaseLayout from "../../../layouts/BaseLayout.astro";
 
 export interface CardData {
   imageSrc: string;
