--- a/src/components/Cards/HorizontalCard.astro
+++ b/src/components/Cards/HorizontalCard.astro
@@ -56,7 +56,7 @@ const getRatioClass = () => {
   <a href=`/${objectType}/${id}`>
     <div class="flex flex-col md:flex-row">
       {/* Image Section */}
-      <div class={`h-64 md:h-full ${getRatioClass()}`}>
+      <div class={`h-64 md:w-2/5 md:h-full ${getRatioClass()}`}>
         <img
           src={imageSrc}
           alt={imageAlt}
@@ -69,7 +69,12 @@ const getRatioClass = () => {
       <div class="w-full md:w-3/5 md:pl-6 py-1 flex flex-col justify-between">
         <div class="flex-grow">
           {/* Title */}
-          <h3 class="text-xl font-bold text-primary mb-3">{title}</h3>
+          <h3
+            class="text-xl font-bold text-primary mb-3"
+            transition:name={title}
+          >
+            {title}
+          </h3>
 
           {/* Text Field 1 */}
           {
